# course-vllm

./: .gitignore  README.md  pyproject.toml
course_vllm/: __init__.py  stages.py
course_vllm/benchmarks/: bench_server.py  cache_aware_demo.py  capacity_planner.py  grader.py  system_optimization.py
course_vllm/engine/: __init__.py  block_manager.py  engine.py  kv_cache.py  paged_kv_cache.py  policies.py  request.py  sampler.py  scheduler.py
course_vllm/kernels/: __init__.py  cuda_ops.py  errors.py  harness.py  triton_ops.py
course_vllm/model/: __init__.py  attention.py  hf_backend.py  model_path.py  ops.py  qwen3_backend.py  qwen3_continuous_backend.py  types.py  (+2 more)
docs/: code_walkthrough.md  course_code_teaching_guide.md  course_teaching_runbook.md  file_guide.md  project_usage_guide.md  reference_notes.md  runnable_validation_guide.md  student_branch_plan.md
examples/: batch_generate.py  block_usage.py  chat_client.py  compare_qwen3_batch_decode.py  compare_qwen3_batch_prefill.py  compare_qwen3_decode.py  compare_qwen3_torch.py  multi_client_stream.py  non_stream_batching_demo.py  offline_generate.py
kernels/: course_ops.cpp  course_ops.cu  vector_add.cu
scripts/: run_all_week_tests.sh  run_final_server.sh
tests/: test_attention.py  test_benchmarks.py  test_block_manager.py  test_chat_client.py  test_engine.py  test_kernels.py  test_kv_cache.py  test_model_path.py  test_paged_kv_cache.py  test_protocol.py  test_qwen3_torch.py  test_sampler.py  test_scheduler.py  test_server_api.py  test_server_batching.py  test_stages.py
validation/: compare_qwen3.py
(+49 files in other folders)
