[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "course-vllm"
version = "0.1.0"
description = "A compact LLM serving engine for the intelligent computing systems course."
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2",
    "safetensors>=0.4",
    "torch==2.8.0",
    "transformers>=4.57,<4.58",
    "triton==3.4.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["course_vllm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
